// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography renders Regular Text without crashing 1`] = `
<Typography>
  <Component>
    <Text
      style={
        Array [
          Object {
            "fontSize": 14,
          },
          undefined,
          Object {
            "fontWeight": "400",
          },
          Object {
            "color": "hsl(0, 2%, 22%)",
          },
          Object {
            "fontFamily": "Helvetica",
          },
        ]
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(57,55,55,1.00)",
            "fontFamily": "Helvetica",
            "fontSize": "14px",
            "fontWeight": "400",
          }
        }
      >
        Some Text
      </div>
    </Text>
  </Component>
</Typography>
`;

exports[`Typography renders Text.HeadingLarge without crashing 1`] = `
<Component>
  <Text
    style={
      Array [
        Object {
          "fontSize": 24,
        },
        undefined,
        Object {
          "fontWeight": "400",
        },
        Object {
          "color": "hsl(0, 2%, 22%)",
        },
        Object {
          "fontFamily": "Helvetica",
        },
      ]
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "color": "rgba(57,55,55,1.00)",
          "fontFamily": "Helvetica",
          "fontSize": "24px",
          "fontWeight": "400",
        }
      }
    >
      Some Text
    </div>
  </Text>
</Component>
`;

exports[`Typography renders Text.HeadingSmall without crashing 1`] = `
<Component>
  <Text
    style={
      Array [
        Object {
          "fontSize": 20,
        },
        undefined,
        Object {
          "fontWeight": "400",
        },
        Object {
          "color": "hsl(0, 2%, 22%)",
        },
        Object {
          "fontFamily": "Helvetica",
        },
      ]
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "color": "rgba(57,55,55,1.00)",
          "fontFamily": "Helvetica",
          "fontSize": "20px",
          "fontWeight": "400",
        }
      }
    >
      Some Text
    </div>
  </Text>
</Component>
`;

exports[`Typography renders Text.HeadingTiny without crashing 1`] = `
<Component>
  <Text
    style={
      Array [
        Object {
          "fontSize": 18,
        },
        undefined,
        Object {
          "fontWeight": "400",
        },
        Object {
          "color": "hsl(0, 2%, 22%)",
        },
        Object {
          "fontFamily": "Helvetica",
        },
      ]
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "color": "rgba(57,55,55,1.00)",
          "fontFamily": "Helvetica",
          "fontSize": "18px",
          "fontWeight": "400",
        }
      }
    >
      Some Text
    </div>
  </Text>
</Component>
`;

exports[`Typography renders Text.Large without crashing 1`] = `
<Component>
  <Text
    style={
      Array [
        Object {
          "fontSize": 16,
        },
        undefined,
        Object {
          "fontWeight": "400",
        },
        Object {
          "color": "hsl(0, 2%, 22%)",
        },
        Object {
          "fontFamily": "Helvetica",
        },
      ]
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "color": "rgba(57,55,55,1.00)",
          "fontFamily": "Helvetica",
          "fontSize": "16px",
          "fontWeight": "400",
        }
      }
    >
      Some Text
    </div>
  </Text>
</Component>
`;

exports[`Typography renders Text.Small without crashing 1`] = `
<Component>
  <Text
    style={
      Array [
        Object {
          "fontSize": 12,
        },
        undefined,
        Object {
          "fontWeight": "400",
        },
        Object {
          "color": "hsl(0, 2%, 22%)",
        },
        Object {
          "fontFamily": "Helvetica",
        },
      ]
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "color": "rgba(57,55,55,1.00)",
          "fontFamily": "Helvetica",
          "fontSize": "12px",
          "fontWeight": "400",
        }
      }
    >
      Some Text
    </div>
  </Text>
</Component>
`;

exports[`Typography renders Text.Subtitle without crashing 1`] = `
<Component>
  <Text
    style={
      Array [
        Object {
          "fontSize": 30,
        },
        undefined,
        Object {
          "fontWeight": "400",
        },
        Object {
          "color": "hsl(0, 2%, 22%)",
        },
        Object {
          "fontFamily": "Helvetica",
        },
      ]
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "color": "rgba(57,55,55,1.00)",
          "fontFamily": "Helvetica",
          "fontSize": "30px",
          "fontWeight": "400",
        }
      }
    >
      Some Text
    </div>
  </Text>
</Component>
`;

exports[`Typography renders Text.SuperTitle without crashing 1`] = `
<Component>
  <Text
    style={
      Array [
        Object {
          "fontSize": 48,
        },
        undefined,
        Object {
          "fontWeight": "400",
        },
        Object {
          "color": "hsl(0, 2%, 22%)",
        },
        Object {
          "fontFamily": "Helvetica",
        },
      ]
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "color": "rgba(57,55,55,1.00)",
          "fontFamily": "Helvetica",
          "fontSize": "48px",
          "fontWeight": "400",
        }
      }
    >
      Some Text
    </div>
  </Text>
</Component>
`;

exports[`Typography renders Text.Tiny without crashing 1`] = `
<Component>
  <Text
    style={
      Array [
        Object {
          "fontSize": 10.2,
        },
        undefined,
        Object {
          "fontWeight": "400",
        },
        Object {
          "color": "hsl(0, 2%, 22%)",
        },
        Object {
          "fontFamily": "Helvetica",
        },
      ]
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "color": "rgba(57,55,55,1.00)",
          "fontFamily": "Helvetica",
          "fontSize": "10.2px",
          "fontWeight": "400",
        }
      }
    >
      Some Text
    </div>
  </Text>
</Component>
`;

exports[`Typography renders Text.Title without crashing 1`] = `
<Component>
  <Text
    style={
      Array [
        Object {
          "fontSize": 36,
        },
        undefined,
        Object {
          "fontWeight": "400",
        },
        Object {
          "color": "hsl(0, 2%, 22%)",
        },
        Object {
          "fontFamily": "Helvetica",
        },
      ]
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "color": "rgba(57,55,55,1.00)",
          "fontFamily": "Helvetica",
          "fontSize": "36px",
          "fontWeight": "400",
        }
      }
    >
      Some Text
    </div>
  </Text>
</Component>
`;

exports[`Typography renders bold Text without crashing 1`] = `
<Typography
  bold={true}
>
  <Component
    bold={true}
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 14,
          },
          undefined,
          Object {
            "fontWeight": "600",
          },
          Object {
            "color": "hsl(0, 2%, 22%)",
          },
          Object {
            "fontFamily": "Helvetica",
          },
        ]
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(57,55,55,1.00)",
            "fontFamily": "Helvetica",
            "fontSize": "14px",
            "fontWeight": "600",
          }
        }
      >
        Some Text
      </div>
    </Text>
  </Component>
</Typography>
`;

exports[`Typography renders inverted Text without crashing 1`] = `
<Typography
  inverted={true}
>
  <Component
    inverted={true}
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 14,
          },
          undefined,
          Object {
            "fontWeight": "400",
          },
          Object {
            "color": "hsl(0, 0%, 98%)",
          },
          Object {
            "fontFamily": "Helvetica",
          },
        ]
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(250,250,250,1.00)",
            "fontFamily": "Helvetica",
            "fontSize": "14px",
            "fontWeight": "400",
          }
        }
      >
        Some Text
      </div>
    </Text>
  </Component>
</Typography>
`;

exports[`Typography renders muted Text without crashing 1`] = `
<Typography
  muted={true}
>
  <Component
    muted={true}
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 14,
          },
          undefined,
          Object {
            "fontWeight": "400",
          },
          Object {
            "color": "hsl(356, 3%, 59%)",
          },
          Object {
            "fontFamily": "Helvetica",
          },
        ]
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(154,147,148,1.00)",
            "fontFamily": "Helvetica",
            "fontSize": "14px",
            "fontWeight": "400",
          }
        }
      >
        Some Text
      </div>
    </Text>
  </Component>
</Typography>
`;
